pod-anti-affinity/required/service-hello.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-req
    app.kubernetes.io/component: hello-req
    app.kubernetes.io/instance: hello-req
  name: hello-req
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-req
  type: ClusterIP
