pod-anti-affinity/required/route-hello.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-req
    app.kubernetes.io/component: hello-req
    app.kubernetes.io/instance: hello-req
  name: hello-req
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: hello-req
    weight: 100
  wildcardPolicy: None
